# rusty-response-web

./: .env  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json
public/: style.css
src/: app.rs  main.rs  vite-env.d.ts
src/app/: App.tsx  index.css
src/app/css/: null.css  variables.css
src/app/layouts/: MainLayout.tsx  index.module.css
src/app/store/: store.ts
src/components/: button.rs  mod.rs  nav.rs  page.rs  signin.rs  signup.rs
src/components/AuthPages/: AuthPages.module.css  Container.tsx  Copyright.tsx  Form.tsx  FormInput.tsx  index.tsx
src/components/Button/: index.module.css  index.tsx
src/components/ContentCodition/: index.tsx
src/components/Footer/: index.module.css  index.tsx
src/components/Form/: Buttons.tsx  Container.tsx  Input.tsx  Row.tsx  Section.tsx  SectionRow.tsx  Select.tsx  (+5 more)
src/constants/: api.ts  notifiers.ts  styles.ts  text.ts
src/contexts/: auth.rs  mod.rs
src/helpers/: ApiError.ts  apiRequest.ts  capitalizeFirstLetter.ts  constants.ts  lowerFirstLetter.ts  toSnakeCase.ts  types.ts
src/hooks/: useAuth.ts  useAuth.tsx  useCatchError.ts  useCrumbs.ts  useFetchData.ts  useForm.ts  useForm.tsx  useGetDataById.ts  useInput.ts  useModalById.ts  useModalUI.ts  useSearch.ts  useSearch.tsx  useSwitchSidebar.ts  useVerifyAuth.ts
src/pages/: NotFoundPage.tsx  ProtectedRoute.tsx  RouteGuards.tsx  SignInPage.tsx  SignUpPage.tsx  about.rs  home.rs  mod.rs  router.tsx  signin.rs  signup.rs
src/resources/: auth.rs  error.rs  mod.rs
src/types/: api.ts  index.ts  notifiers.ts  servers.ts  ui.ts
(+101 files in other folders)
