[package]
name = "rusty-response-web"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.0", features = ["csr"] }
leptos_meta = "0.8.0"
leptos_router = "0.8.0"
leptos-struct-table = "0.15.0"
console_error_panic_hook = "0.1"
leptoaster = "0.2"
leptos-maybe-callback = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"] }
web-sys = "0.3"
console_log = "1"
log = "0.4"
leptos-use = "0.16"
reqwasm = "0.5.0"
thiserror = "2.0"
